# agent-resources

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agr.toml  pyproject.toml  tasks.md
.github/workflows/: docs.yml  publish.yml
agr/: __init__.py  config.py  constants.py  exceptions.py  fetcher.py  github.py  handle.py  instructions.py  main.py  metadata.py  resolver.py  resources.py  scaffold.py  skill.py  source.py  status.py  tool.py  utils.py
agr/adapters/: converter.py  detector.py
agr/cli/: __init__.py  add.py  common.py  discovery.py  handlers.py  init.py  list.py  main.py  multi_tool.py  paths.py  remove.py  run.py  status.py  sync.py  tool.py
agr/commands/: __init__.py  add.py  init.py  list.py  remove.py  sync.py  tools.py
agr/sdk/: __init__.py  cache.py  hub.py  skill.py  types.py
agrx/: __init__.py  main.py
docs/: index.html  mkdocs.yml
docs/docs/: agent-resources-sdk.md  create-your-own-repo.md  creating.md  how-packaging-works.md  index.md  install-agent-resources.md  llms.txt  reference.md  supported-platforms.md
reports/: cutting-edge-skills-best-practices.md  skills-ecosystem-analysis-v2.md  skills-ecosystem-analysis.md
skills/agent-feedback/: SKILL.md
skills/code-review/: SKILL.md
skills/convert-to-skills/: SKILL.md
skills/discover-assumptions/: SKILL.md
skills/discover-opportunities/: SKILL.md
skills/discover-outcomes/: SKILL.md
skills/discover-solution-space/: SKILL.md
src/agent-resources/: README.md  pyproject.toml
src/agent-resources/agent_resources/: fetcher.py
src/agent-resources/agent_resources/cli/: agent.py  command.py  common.py  skill.py
src/agr/: pyproject.toml
tests/: __init__.py  conftest.py  test_adapter_integration.py  test_add_local.py  test_add_unified.py  test_agr_support_skill.py  test_agrx_command_building.py  test_agrx_unified.py  test_auto_discovery.py  test_commands.py  test_common_utils.py  test_compatibility_warning.py  test_config.py  test_copilot.py  test_cursor.py  test_directory_discovery.py  test_discovery.py  test_docs.py  test_fetcher.py  test_fixtures.py  test_handle.py  test_init_authoring.py  test_installation_paths.py  test_integration_scenarios.py  test_list.py  test_local_sync.py  test_multi_tool.py  test_namespace_flattening.py  test_namespaced_paths.py  test_nested_discovery.py  test_package_detection.py  test_path_namespacing_comprehensive.py  test_paths.py  test_remote_handling.py  test_remote_multi_tool.py  test_remove_unified.py  test_resolver.py  test_resources_dir.py  test_single_file_detection.py  test_skill.py  (+6 more)
(+122 files in other folders)
