[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agr"
version = "0.6.1"
description = "Agent Resources - A package and project manager for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "tomlkit>=0.12",
]

[project.scripts]
agr = "agr.main:app"
agrx = "agrx.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agr", "agrx"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring network (skip with '-m \"not e2e\"')",
    "network: tests that make real network requests",
    "slow: tests taking > 5 seconds",
]
