[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agr"
version = "0.7.2b1"
description = "Agent Resources - A package and project manager for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "tomlkit>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "respx>=0.21",
    "ty>=0.0.14",
]

[project.scripts]
agr = "agr.main:app"
agrx = "agrx.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agr", "agrx"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring network (skip with '-m \"not e2e\"')",
    "network: tests that make real network requests",
    "slow: tests taking > 5 seconds",
    "requires_cli(name): skip test if CLI tool is not installed",
]
